# auto-refresh

auto-refresh-client/: Cargo.toml
auto-refresh-client/src/: gui.rs  main.rs
auto-refresh-server/: Cargo.toml
auto-refresh-server/.github/workflows/: rust_build.yml
auto-refresh-server/src/: bntx.rs  ffi.rs  lib.rs  offsets.rs  resource.rs
auto-refresh-server/src/resource/: containers.rs  types.rs
