[package]
name = "auto-refresh-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
nutexb = { version = "0.6.0", features = ["ddsfile", "image"]}
ftp = { version = "3.0.1" }
bntx = { git = "https://github.com/ScanMountGoat/bntx.git" }
image = "0.23.10"
eframe = "0.19.0"
